Fix Summary content loader on firefox

--- a/react/summary.css
+++ b/react/summary.css
@@ -43,11 +43,6 @@
   height: 5em;
 }
 
-.vtex-product-summary__image-loader {
-  width: 100%;
-  height: 100%;
-}
-
 a.clear-link {
   text-decoration: inherit;
   color: inherit;
